# TaskNinja

./: Cargo.toml  README.md  config.json  tasks.json
data/: config.json  tasks.json
src/: command_handler.rs  config.rs  dates.rs  main.rs  tasks.json  tasks.rs  utils.rs
src/data/: tasks.json
