[package]
name = "oxidized_calendar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0.8"
lazy_static = "1.4.0"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.23"
